packages/qwik-optimizer/rust/core/src/snapshots/qwik_core__test__example_transpile_jsx_only.snap
---
source: packages/qwik-optimizer/rust/core/src/test.rs
assertion_line: 2344
expression: output
---
==INPUT==


import { component$, useStore } from '@builder.io/qwik';

export const App = component$((props) => {
	return (
		<Cmp>
			<p class="stuff" onClick$={() => console.log('warn')}>Hello Qwik</p>
		</Cmp>
	);
});

============================= app_component_ckepmxzlub0.ts (ENTRY POINT)==

import { _jsxSorted } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export const App_component_ckEPmXZlub0 = (props)=>{
    return /*#__PURE__*/ _jsxSorted(Cmp, null, null, /*#__PURE__*/ _jsxSorted("p", null, {
        class: "stuff",
        onClick$: /*#__PURE__*/ qrl(()=>import("./app_component_cmp_p_onclick_vuxzfutkpto.ts"), "App_component_Cmp_p_onClick_vuXzfUTkpto")
    }, "Hello Qwik", 3, null), 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;yCAG8B,CAAC;IAC9B,qBACC,WAAC,+BACA,WAAC;QAAE,OAAM;QAAQ,QAAQ;OAA6B;AAGzD\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "app_component_ckepmxzlub0",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    90,
    207
  ]
}
*/
============================= app_component_cmp_p_onclick_vuxzfutkpto.ts (ENTRY POINT)==

export const App_component_Cmp_p_onClick_vuXzfUTkpto = ()=>console.log('warn');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"uDAM8B,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_Cmp_p_onClick_vuXzfUTkpto",
  "entry": null,
  "displayName": "App_component_Cmp_p_onClick",
  "hash": "vuXzfUTkpto",
  "canonicalFilename": "app_component_cmp_p_onclick_vuxzfutkpto",
  "path": "",
  "extension": "ts",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    151,
    176
  ]
}
*/
============================= test.ts ==

import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./app_component_ckepmxzlub0.ts"), "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,oBAAM,2GAMhB\"}")
== DIAGNOSTICS ==

[]
